# actionfigures

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .coverage  Dockerfile  coverage.xml  imgto3d.db  pyproject.toml
backend/docs/: search.js  src.html
backend/docs/src/: modeling.html  server.html  test_2d.html
backend/src/: modeling.py  server.py
backend/tests/: conftest.py  test_api.py  test_modeling.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  types.ts
frontend/src/api/: client.ts  errors.ts
frontend/src/components/auth/: AuthPage.tsx
frontend/src/components/common/: ConfirmationModal.tsx  ErrorModal.tsx  SaveModal.tsx
frontend/src/styles/: global.css
frontend/src/utils/: constants.ts  helpers.ts
frontend/src/viewer/: ThreeDViewer.tsx
model_generator/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  requirements.txt
model_generator/api_test/: test_api.py
model_generator/example/: workflow.json
model_generator/mesh_generator/: endpoint_test.sh
model_generator/script_example/: api_server.py  endpoint_test.sh  workflow.json
